cncProd/force-app/main/default/objects/Invoice__c/fields/AK_Number__c.field-meta.xml
<CustomField>
    <fullName>AK_Number__c</fullName>
    <formula>StockReservation__r.Agreement_No__c</formula>
    <label>Sales Agreement Number</label>
    <type>Text</type>
</CustomField>