cncProd/force-app/main/default/objects/Invoice__c/fields/Amount_With_GST_For_Report__c.field-meta.xml
<CustomField>
    <fullName>Amount_With_GST_For_Report__c</fullName>
    <formula>Amount_With_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount w/GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>