cncProd/force-app/main/default/objects/Invoice__c/fields/Amount_Without_GST__c.field-meta.xml
<CustomField>
    <fullName>Amount_Without_GST__c</fullName>
    <formula>IF( TEXT(Payment_Type__c) = &apos;Invoice&apos;, Amount_With_GST__c/1.07, 
IF( TEXT(Campaign__r.Type) =&apos;Paid Event&apos;,Amount_With_GST__c/1.07,
IF( TEXT(Campaign__r.Type) =&apos;Promotions&apos;,Amount_With_GST__c/1.07,
IF( TEXT(Campaign__r.Type) =&apos;Evergreen Promotion&apos;,Amount_With_GST__c/1.07,
IF( TEXT(Campaign__r.Type) =&apos;Sales Targeted Promo&apos;, Amount_With_GST__c/1.07,
IF( TEXT(Event__c) =&apos;E-shop&apos;, Amount_With_GST__c/1.07, Amount_With_GST__c)
)
)
)
)
)</formula>
    <label>Amount w/o GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>