cncProd/force-app/main/default/objects/Invoice__c/fields/BASEVALUE__c.field-meta.xml
<CustomField>
    <fullName>BASEVALUE__c</fullName>
    <formula>Amount_Without_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BASEVALUE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>