cncProd/force-app/main/default/objects/Invoice__c/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <label>Billing Postal Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>