cncProd/force-app/main/default/objects/Invoice__c/fields/CardType__c.field-meta.xml
<CustomField>
    <fullName>CardType__c</fullName>
    <inlineHelpText>CardType</inlineHelpText>
    <label>CardType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>