cncProd/force-app/main/default/objects/Invoice__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF(
OR(ISBLANK(StockReservation__c),ISNULL(StockReservation__c)),

IF(
OR(NOT(ISBLANK(Account__c)),NOT(ISNULL(Account__c))),
Account__r.FirstName &amp; &quot; &quot; &amp; Account__r.LastName, &apos;&apos;
),

StockReservation__r.Customer_Name__c

)</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>