cncProd/force-app/main/default/objects/Invoice__c/fields/Date_Time_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Purchase__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Brain Tree Transaction Date</description>
    <label>Brain Tree Transaction Date</label>
    <type>DateTime</type>
</CustomField>