cncProd/force-app/main/default/objects/Invoice__c/fields/DOCDATE__c.field-meta.xml
<CustomField>
    <fullName>DOCDATE__c</fullName>
    <formula>eInvoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOCDATE</label>
    <type>Date</type>
</CustomField>