cncProd/force-app/main/default/objects/Invoice__c/fields/E_shop_Order__c.field-meta.xml
<CustomField>
    <fullName>E_shop_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E-shop Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>