cncProd/force-app/main/default/objects/Invoice__c/fields/E_shop_order_number__c.field-meta.xml
<CustomField>
    <fullName>E_shop_order_number__c</fullName>
    <label>E-shop order number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>