cncProd/force-app/main/default/objects/Invoice__c/fields/eInvoice__c.field-meta.xml
<CustomField>
    <fullName>eInvoice__c</fullName>
    <label>eInvoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>