cncProd/force-app/main/default/objects/Invoice__c/fields/eInvoice_Date__c.field-meta.xml
<CustomField>
    <fullName>eInvoice_Date__c</fullName>
    <label>eInvoice Date</label>
    <type>Date</type>
</CustomField>