cncProd/force-app/main/default/objects/Invoice__c/fields/Floor_Unit__c.field-meta.xml
<CustomField>
    <fullName>Floor_Unit__c</fullName>
    <label>Floor/ Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>