cncProd/force-app/main/default/objects/Invoice__c/fields/GST_Value__c.field-meta.xml
<CustomField>
    <fullName>GST_Value__c</fullName>
    <label>GST Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>