cncProd/force-app/main/default/objects/Invoice__c/fields/Inv_No__c.field-meta.xml
<CustomField>
    <fullName>Inv_No__c</fullName>
    <label>Inv No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>