cncProd/force-app/main/default/objects/Invoice__c/fields/Invoice_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Hyperlink__c</fullName>
    <formula>IF(ISBLANK(InvoicePdfURL__c), &quot;&quot;, HYPERLINK(InvoicePdfURL__c, &quot;Invoice&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Links Invoice PDF</inlineHelpText>
    <label>Invoice PDF URL</label>
    <type>Text</type>
</CustomField>