cncProd/force-app/main/default/objects/Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>/*IF(text(Transaction_Status__c) == &apos;processor_declined&apos;, &apos;processor_declined&apos;, TEXT(SeqNum__c))*/ 


IF(

DATEVALUE(CreatedDate) &gt; DATEVALUE(&quot;2019-10-30&quot;) &amp;&amp; 
Department__c = &apos;CCI&apos;,

&quot;SG-CCI-&quot;
&amp;
IF(SequenceIdentifier__c=&quot;Paid Event&quot;,&quot;EVT&quot; &amp; 
IF(Promotion_Type__c = &apos;One Time Purchase&apos;, &quot;-OTP&quot; &amp; SUBSTITUTE(Campaign__r.CampaignId__c, &quot;CID&quot;, &quot;&quot;), 
IF(Promotion_Type__c = &apos;Service Package&apos;, &quot;-SVCP&quot; &amp; SUBSTITUTE(Campaign__r.CampaignId__c, &quot;CID&quot;, &quot;&quot;), 
IF(Promotion_Type__c = &apos;Merchandise&apos;, &quot;-MER&quot; &amp; SUBSTITUTE(Campaign__r.CampaignId__c, &quot;CID&quot;, &quot;&quot;), &quot;&quot;))), 

IF(SequenceIdentifier__c=&quot;AfterSales&quot;,&quot;AFT&quot; &amp; 
IF(Promotion_Type__c = &apos;One Time Purchase&apos;, &quot;-OTP&quot; &amp; SUBSTITUTE(Campaign__r.CampaignId__c, &quot;CID&quot;, &quot;&quot;), 
IF(Promotion_Type__c = &apos;Service Package&apos;, &quot;-SVCP&quot; &amp; SUBSTITUTE(Campaign__r.CampaignId__c, &quot;CID&quot;, &quot;&quot;), 
IF(Promotion_Type__c = &apos;Merchandise&apos;, &quot;-MER&quot; &amp; SUBSTITUTE(Campaign__r.CampaignId__c, &quot;CID&quot;, &quot;&quot;), &quot;&quot;))), 
LPAD(TEXT(MONTH( DATEVALUE(CreatedDate) )),2,&apos;0&apos;)
&amp;
RIGHT(TEXT(YEAR( DATEVALUE(CreatedDate))),2)
))
&amp;
&quot;-&quot;&amp;IF(TEXT(Transaction_Status__c) == &apos;processor_declined&apos;, &apos;processor_declined&apos;, TEXT(SeqNum__c))
/*&quot;-&quot;&amp;TEXT(SeqNum__c)*/

,

&quot;SG-&quot;&amp;Department__c&amp;&quot;-&quot;
&amp;
IF(SequenceIdentifier__c=&quot;Paid Event&quot;,&quot;EVT&quot; &amp; SUBSTITUTE(Campaign__r.CampaignId__c, &quot;CID&quot;, &quot;&quot;) ,
IF(SequenceIdentifier__c=&quot;AfterSales&quot;,&quot;AFT&quot; &amp; SUBSTITUTE(Campaign__r.CampaignId__c, &quot;CID&quot;, &quot;&quot;) ,
IF(SequenceIdentifier__c=&quot;Sales Targeted Promo&quot;,&quot;STP&quot; &amp; SUBSTITUTE(Campaign__r.CampaignId__c, &quot;CID&quot;, &quot;&quot;) ,			
LPAD(TEXT(MONTH( DATEVALUE(CreatedDate) )),2,&apos;0&apos;)
&amp;
RIGHT(TEXT(YEAR( DATEVALUE(CreatedDate))),2)
)
)
)
&amp;
&quot;-&quot;&amp;IF(TEXT(Transaction_Status__c) == &apos;processor_declined&apos;, &apos;processor_declined&apos;, LPAD(TEXT(SeqNum__c),8,&apos;0&apos;))
/*&quot;-&quot;&amp;LPAD(TEXT(SeqNum__c),8,&apos;0&apos;)*/
)</formula>
    <label>Order No / Invoice No</label>
    <type>Text</type>
</CustomField>