cncProd/force-app/main/default/objects/Invoice__c/fields/InvoicePdfURL__c.field-meta.xml
<CustomField>
    <fullName>InvoicePdfURL__c</fullName>
    <description>Links invoice PDF</description>
    <inlineHelpText>Links invoice PDF</inlineHelpText>
    <label>Invoice PDF URL</label>
    <type>Url</type>
</CustomField>