cncProd/force-app/main/default/objects/Invoice__c/fields/NARRATIVE__c.field-meta.xml
<CustomField>
    <fullName>NARRATIVE__c</fullName>
    <formula>eInvoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NARRATIVE</label>
    <type>Text</type>
</CustomField>