cncProd/force-app/main/default/objects/Invoice__c/fields/Net_Amount_After_Commission__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_After_Commission__c</fullName>
    <formula>Net_Amount__c -  Commission_Rate__c -  transaction_Fee_2_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount (After Commission)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>