cncProd/force-app/main/default/objects/Invoice__c/fields/NRIC_New__c.field-meta.xml
<CustomField>
    <fullName>NRIC_New__c</fullName>
    <formula>if(StockReservation__c != null,  StockReservation__r.NRIC__c, &apos;&apos;)</formula>
    <label>NRIC</label>
    <type>Text</type>
</CustomField>