cncProd/force-app/main/default/objects/Invoice__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Receipt</fullName>
            </value>
            <value>
                <fullName>Accessories Credit</fullName>
            </value>
            <value>
                <fullName>Service Credit</fullName>
            </value>
            <value>
                <fullName>Salesforce clearing Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>