cncProd/force-app/main/default/objects/Invoice__c/fields/PaymentSource__c.field-meta.xml
<CustomField>
    <fullName>PaymentSource__c</fullName>
    <formula>IF( 
OR( 
TEXT(StockReservation__r.Stock_Source__c) == &apos;KIA Warehouse&apos;, 
TEXT(StockReservation__r.Stock_Source__c) == &apos;MIT Warehouse&apos;, 
TEXT(StockReservation__r.Stock_Source__c) == &apos;CIT Warehouse&apos; 
) , 
&apos;Warehouse&apos;, 
IF(TEXT(Campaign__r.Type) == &quot;Paid Event&quot;,&quot;Event&quot;,
IF( SequenceIdentifier__c=&quot;AfterSales&quot; ,&quot;AfterSales&quot;,
IF( TEXT(Campaign__r.Type) == &quot;Promotions&quot; ,&quot;AfterSalesPromo&quot;,&quot;&quot;)
)
)
)</formula>
    <label>Payment Source</label>
    <type>Text</type>
</CustomField>