cncProd/force-app/main/default/objects/Invoice__c/fields/Person_Account_Profiling__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Profiling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account Profiling</label>
    <referenceTo>Person_Account_Profiling__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>