cncProd/force-app/main/default/objects/Invoice__c/fields/Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Item__c</fullName>
    <label>Product Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>