cncProd/force-app/main/default/objects/Invoice__c/fields/Product_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Product_Item_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Product Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>