cncProd/force-app/main/default/objects/Invoice__c/fields/Sales_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement_Name__c</fullName>
    <formula>Sales_Agreement__r.SOH_SONO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Agreement Name</label>
    <type>Text</type>
</CustomField>