cncProd/force-app/main/default/objects/Invoice__c/fields/Sales_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Sales_Consultant__c</fullName>
    <formula>Sales_Agreement__r.Owner:User.FirstName + &apos; &apos; +  Sales_Agreement__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Consultant</label>
    <type>Text</type>
</CustomField>