cncProd/force-app/main/default/objects/Invoice__c/fields/SeqNum__c.field-meta.xml
<CustomField>
    <fullName>SeqNum__c</fullName>
    <label>SeqNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>