cncProd/force-app/main/default/objects/Invoice__c/fields/SequenceIdentifier__c.field-meta.xml
<CustomField>
    <fullName>SequenceIdentifier__c</fullName>
    <description>Instead of Month - Year e.g. 0719, we will update to something else by parsing value from this field.</description>
    <label>Sequence Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>