cncProd/force-app/main/default/objects/Invoice__c/fields/StockReservation__c.field-meta.xml
<CustomField>
    <fullName>StockReservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Reservation</label>
    <referenceTo>Stock_Reservation__c</referenceTo>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>