cncProd/force-app/main/default/objects/Invoice__c/fields/STOPFLAG__c.field-meta.xml
<CustomField>
    <fullName>STOPFLAG__c</fullName>
    <formula>&quot;N&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STOPFLAG</label>
    <type>Text</type>
</CustomField>