cncProd/force-app/main/default/objects/Invoice__c/fields/SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>SUFFIX__c</fullName>
    <formula>TEXT(Event__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUFFIX</label>
    <type>Text</type>
</CustomField>