cncProd/force-app/main/default/objects/Invoice__c/fields/Total_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Price__c</fullName>
    <label>Total Cost Price</label>
    <summarizedField>Invoice_Promo_Line_Item__c.Total_Cost_Price__c</summarizedField>
    <summaryForeignKey>Invoice_Promo_Line_Item__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>