cncProd/force-app/main/default/objects/Invoice__c/fields/transaction_Fee_2_5__c.field-meta.xml
<CustomField>
    <fullName>transaction_Fee_2_5__c</fullName>
    <formula>Amount_With_GST__c * 0.025</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Rate Transaction Fee (2.5%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>