cncProd/force-app/main/default/objects/Invoice__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>TransactionID</inlineHelpText>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>