cncProd/force-app/main/default/objects/Invoice__c/fields/Vehicle_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration_Number__c</fullName>
    <inlineHelpText>VehicleRegistrationNumber</inlineHelpText>
    <label>Vehicle Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>