cncProd/force-app/main/default/objects/Invoice__c/recordTypes/C_C_Payment_RT.recordType-meta.xml
<RecordType>
    <fullName>C_C_Payment_RT</fullName>
    <active>true</active>
    <label>C&amp;C Payment RT</label>
</RecordType>