cncProd/force-app/main/default/objects/Invoice__c/recordTypes/E_Shop_Payment_RT.recordType-meta.xml
<RecordType>
    <fullName>E_Shop_Payment_RT</fullName>
    <active>true</active>
    <label>E-Shop Payment RT</label>
</RecordType>