cncProd/force-app/main/default/objects/Invoice__c/recordTypes/RA_Payment_RT.recordType-meta.xml
<RecordType>
    <fullName>RA_Payment_RT</fullName>
    <active>true</active>
    <label>RA Payment RT</label>
</RecordType>